--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.25.0",
-    "@typescript-eslint/parser": "^5.25.0",
+    "@faker-js/faker": "^7.6.0",
     "@types/jest": "^29.2.4",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint": "8.30.0",
+    "eslint-config-next": "13.1.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
@@ -34,9 +37,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
-    "prettier": "^2.6.2",
-    "eslint": "8.30.0",
-    "eslint-config-next": "13.1.1",
-    "jest": "^29.3.1"
+    "jest": "^29.3.1",
+    "prettier": "^2.6.2"
   }
 }
