--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "jest": "^29.3.1",
+    "node-mocks-http": "^1.12.1",
     "prettier": "^2.6.2"
   }
 }
