refact: update all project structure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,11 +21,7 @@
     "rootDir": ".",
     "baseUrl": ".",
     "paths": {
-      "@/domain/*": ["./core/1.domain/*"],
-      "@/application/*": ["./core/2.application/*"],
-      "@/adapters/*": ["./core/3.adapters/*"],
-      "@/presentation/*": ["./core/4.presentation/*"],
-      "@/infra/*": ["./core/5.infra/*"]
+      "@/*": ["core/*"],
     }
   },
   "include": [
