--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "prisma:migrate": "npx prisma migrate dev --name init"
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@prisma/client": "4.8.0",
+    "@types/ramda": "^0.28.20",
     "axios": "^1.2.1",
     "next": "13.1.1",
+    "ramda": "^0.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
@@ -39,6 +44,10 @@
     "eslint-plugin-react-hooks": "^4.5.0",
     "jest": "^29.3.1",
     "node-mocks-http": "^1.12.1",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "prisma": "^4.8.0"
+  },
+  "prisma": {
+    "schema": "./core/infra/database/prisma/scheme.prisma"
   }
 }
